docs: Add CI matrix and Java compatibility section to BUILDING.md
Co-authored-by: authorjapps <12598420+authorjapps@users.noreply.github.com>